--- a/src/pages/try.html
+++ b/src/pages/try.html
@@ -1,6 +1,17 @@
 <div style="display: flex;align-items: flex-start; font-family: Verdana, Geneva, Tahoma, sans-serif; flex-direction: column;padding: 20px;">
-    <div style="font-size: 50px;margin: 10px 0px;;">FishHook</div>
-    <div style="font-size: 25px;margin: 20px 0px;">Results</div>
+    <div style="font-size: 50px;margin: 10px 0px;">FishHook</div>
+    <div style="font-size: 15px;margin: 10px 0px;">
+        FishHook helps in detecting the existence of TiLV in the nile tilapia based to visible physical signs.
+    </div>
+    <div style="font-size: 25px;margin: 20px 0px; font-weight: bold;">Results</div>
+    <div style="font-size: 15px;font-weight: bold;display: flex;flex-direction: column;">
+        <div style="margin: 10px 0px;display: flex;">
+            <div style="font-weight: bold; width: 70px;">Date: </div>
+            <div >
+                November 8, 2022
+            </div>
+        </div>
+    </div>
     <div style="font-size: 15px;">The Image: </div>
     <img style="width: 50%;border: 2px solid black;margin: 20px 0px 40px 0px;padding: 5px;" src="https://image.shutterstock.com/image-vector/sample-red-square-grunge-stamp-260nw-338250266.jpg" alt="">
     <div style="font-size: 15px;font-weight: bold;display: flex; margin-bottom: 15px;">
@@ -33,14 +44,6 @@
             <div style="font-weight: bold; width: 200px;">Abdominal Shape: </div>
             <div style="color: green;">
                 Negative
-            </div>
-        </div>
-    </div>
-    <div style="font-size: 15px;font-weight: bold;display: flex;flex-direction: column;">
-        <div style="margin: 10px 0px;display: flex;">
-            <div style="font-weight: bold; width: 70px;">Date: </div>
-            <div >
-                November 8, 2022
             </div>
         </div>
     </div>
